@@ -3,6 +3,7 @@ module Spec
     module Runner
       class EvalContext < Test::Unit::TestCase
         include Spec::Rails::Matchers
+        ActionView::Base.cache_template_extensions = false
         cattr_accessor :fixture_path, :use_transactional_fixtures, :use_instantiated_fixtures, :global_fixtures
         remove_method :default_test if respond_to?(:default_test)
         @@model_id = 1000
