@@ -2,6 +2,8 @@
 
 == Trunk
 
+* Fixed [#8897] Error when mixing controller spec with/without integrated views and using template system other than rhtml
+* Updated generated specs to 0.8 syntax
 * Applied [#8994] trunk: generated names for be_ specs (Patch from Yurii Rashkovskii)
 
 == Version 0.8.2
